# 2026-ams-studentconference

./: LICENSE  LICENSE.MIT  LINKS.md  README.md  environment.yml  myst.yml  pyproject.toml
ams-studentconference/examples/: index.md
ams-studentconference/examples/metpy/: Absolute_Vorticity.ipynb  Advanced_Sounding.ipynb  Advanced_Sounding_With_Complex_Layout.ipynb  Advection.ipynb  Angle_to_Direction.ipynb  Bulk_Shear.ipynb  Combined_plotting.ipynb  Dewpoint_and_Mixing_Ratio.ipynb  Divergence.ipynb  Equivalent_Potential_Temperature.ipynb  Find_Natural_Neighbors_Verification.ipynb  Four_Panel_Map.ipynb  GINI_Water_Vapor.ipynb  Gradient.ipynb  High_Low_Analysis.ipynb  Hodograph_Inset.ipynb  Inverse_Distance_Verification.ipynb  Mean_Pressure_Weighted.ipynb  Mesonet_Stationplot.ipynb  Mountain_Problem.ipynb  NEXRAD_Level_2_File.ipynb  NEXRAD_Level_3_File.ipynb  Natural_Neighbor_Verification.ipynb  Parse_Angles.ipynb  Plotting_Surface_Analysis.ipynb  Point_Interpolation.ipynb  QVector.ipynb  Shearing_Deformation.ipynb  Simple_Fronts_Plot.ipynb  Simple_Sounding.ipynb  Simplified_Image_Plot.ipynb  Skew-T_Layout.ipynb  Smoothing.ipynb  Sounding_Calculations.ipynb  Sounding_LCL_Dataset.ipynb  Static_Stability.ipynb  Station_Plot.ipynb  Station_Plot_with_Layout.ipynb  Stretching_Deformation.ipynb  Thickness_Hydrostatic.ipynb  (+23 more)
ams-studentconference/examples/python-awips/: Colored_Surface_Temperature_Plot.ipynb  Colorized_Grid_Data.ipynb  Forecast_Model_Vertical_Sounding.ipynb  Grid_Levels_and_Parameters.ipynb  METAR_Station_Plot_with_MetPy.ipynb  Map_Resources_and_Topography.ipynb  Model_Sounding_Data.ipynb  NEXRAD_Level3_Radar.ipynb  Precip_Accumulation_Region_of_Interest.ipynb  Regional_Surface_Obs_Plot.ipynb  Satellite_Imagery.ipynb  Upper_Air_BUFR_Soundings.ipynb  Watch_Warning_and_Advisory_Plotting.ipynb  index.md
ams-studentconference/workshop/: 01 - MetPy Primer.ipynb  02 - Python-AWIPS Data Access.ipynb  A1 - CAVE Overview.md  ref-gridded-data.ipynb  ref-sounding-skewt.ipynb  ref-surface-obs.ipynb
