[project]
authors = [
  { name = "Drew Camron", email = "dcamron@ucar.edu" },
  { name = "Tiffany Meyer", email = "tmeyer@ucar.edu" },
]
license-files = ["LICENSE*"]
name = "2026-ams-studentconference"
readme = "README.md"
requires-python = ">= 3.12"
version = "2026.01"

[tool.pixi.dependencies]
boto3 = ">=1.42.33,<1.43"
cartopy = ">=0.25.0,<0.26"
ipykernel = ">=7.1.0,<7.2"
metpy = ">=1.7.1,<1.8"
matplotlib = ">=3.10.8,<3.11"
netcdf4 = ">=1.7.4,<1.8"
python-awips = ">=23.1.1,<23.2"
siphon = ">=0.10.0,<0.11"
xarray = ">=2025.12.0,<2025.13"
geopandas = ">=1.1.2,<1.2"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]
repository = "https://github.com/Unidata/2026-ams-studentconference"

[tool.pixi.feature.test.dependencies]
nbval = ">=0.11.0,<0.12"

[tool.pixi.feature.lab.dependencies]
jupyter-resource-usage = ">=1.2.0,<1.3"
jupyterlab = ">=4.5.3,<4.6"
jupyterlab-git = ">=0.51.4,<0.52"
jupyterlab-myst = ">=2.6.0,<2.7"

[tool.pixi.feature.book.dependencies]
mystmd = ">=1.8.0,<1.9"

[tool.pixi.feature.style.dependencies]
prettier = ">=3.8.1,<3.9"
ruff = ">=0.14.13,<0.15"
taplo = ">=0.10.0,<0.11"

[tool.pixi.feature.dev.dependencies]
jupytext = ">=1.19.0,<1.20"
sphinx-gallery = ">=0.20.0,<0.21"

[tool.pixi.environments]
default = { features = ["lab", "book", "test"]}
dev = { features = ["dev"] }
lab = { features = ["lab"] }
book = { features = ["book"] }
test = { features = ["test"] }
style = { features = ["style"], no-default-feature = true }

[tool.jupytext]
sphinx_convert_rst2md = true
